# wlan-ap

./: .clang-format  .gitignore  .gitmodules  0001-add-cybertan-eww631-a1-and-b1-support-v5.4-kernel.patch  Dockerfile  LICENSE  LICENSE.md  Makefile  OPENWIFI_CODING_GUIDELINES.md  OPENWIFI_PR_GUIDELINES.md  OPENWIFI_RELEASE_PROCEDURE.md  README.md  RELEASE-NOTES.md  build.sh  config-20.x.yml  config.yml  dock-run.sh  setup.py
.github/: copilot-instructions.md
backports/: 0001-build-build-kernel-image-before-building-modules-pac.patch  0002-build-fix-build-with-CONFIG_STRIP_KERNEL_EXPORTS.patch  0002-kernel-add-linux-5.10-support.patch  0003-generic-ar8216-fix-kernel-5.10-compile-error.patch  0003-kernel-add-linux-5.10-support.patch  0004-generic-ar8216-update-version-switch-for-of_get_phy_.patch  0004-mediatek-update-to-latest-HEAD.patch  0004-mediatek-update-to-latest-trunk-version.patch  0005-kernel-5.10-fix-busy-wait-loop-in-mediatek-PPE-code.patch  0005-sysupgrade-nand-allow-limiting-rootfs_data-by-settin.patch  0006-kernel-hack-5.10-make-UDP-tunneling-user-selectable.patch  0006-uboot-mediatek-add-support-for-linksys-e8450.patch  0007-kernel-5.10-add-missing-partitions-doc-syntax-commit.patch  0007-uboot-envtools-add-defaults-for-linksys-e8450-ubi.patch  0008-kernel-5.10-refresh-patches.patch  0008-realtek-update-to-latest-owrt-HEAD.patch  0009-build-fix-build-with-CONFIG_STRIP_KERNEL_EXPORTS.patch  0009-include-set-kernel-version.mk.patch  0010-kernel-update-kernel-5.10-to-5.10.16.patch  0010-mt76-update-to-latest-HEAD-revision.patch  0011-backport-mkits.sh.patch  0011-mediatek-implement-bad-block-management-table-suppor.patch  0012-libubox-update-to-latest-HEAD.patch  0012-mediatek-add-work-in-progress-linux-5.10-support.patch  0013-iw-update-to-latest-HEAD.patch  0013-mediatek-add-support-for-configuring-BMT-table-size-.patch  0013-umdns-update-to-latest-HEAD.patch  0014-kernel-add-support-for-enabling-fit-firmware-partiti.patch  0014-libubox-update-to-latest-HEAD.patch  0015-mediatek-add-linksys-e8450-support.patch  0015-umdns-update-to-latest-HEAD.patch  0016-iwinfo-update-to-latest-git-HEAD.patch  0016-kernel-modules-move-act_gact-into-kmod-sched-core.patch  0016-mediatek-linksys-e8450-fix-wifi-and-lan4.patch  0017-image-add-support-for-building-FIT-image-with-filesy.patch  0017-kernel-add-bdpu-filter-support.patch  0017-netifd-update-to-latest-HEAD.patch  0018-mac80211-update-to-latest-HEAD.patch  0018-sysupgrade-nand-allow-limiting-rootfs_data-by-settin.patch  0019-hostapd-update-to-latest-HEAD.patch  (+29 more)
cloud/: dut.json  run.sh
config/: ap2220_config  ea8300_config  ecw5211_config  ecw5410_config
demo-github/: copilot-instructions.md
docker/: Dockerfile
example/: .gitignore  Makefile  README.md  (+2 more)
feeds/ipq807x_v5.4/ftm/src/: Makefile.am  ftm_fm_pfal_linux_3990.c  ftm_wlan.c
feeds/ipq807x_v5.4/log-helper/src/: CMakeLists.txt  main.c
feeds/ipq807x_v5.4/qca-diag/src/src/: Makefile.am  diag_lsm.c  diag_lsmi.h  diagsvc_malloc.c  ts_linux.h
feeds/ipq807x_v5.4/qca-diag/src/uart_log/: Makefile.am
feeds/ipq95xx/ftm/src/: Android.mk  configure.ac  ftm_bt_common.h  ftm_bt_power_hal.h  ftm_common.h  ftm_dbg.h  ftm_fm_pfal.h  ftm_iot.c  ftm_iot.h  ftm_main.c  ftm_nfcnq_fwdl.c  ftm_wlan.c  ftm_wlan.h  ftm_wlan_win.h  ftm_write_to_flash.c
feeds/ipq95xx/ftm/src/wds/: Android.mk  wds_hci_pfal.h
feeds/ipq95xx/qca-diag/src/test/: Makefile.am
feeds/mtk-app/atenl/src/: CMakeLists.txt  atenl.h  debug.h  eeprom.c  eth.c  hqa.c  main.c  nl.c  nl.h  util.c  util.h
feeds/mtk-wifi-7/mt76-vendor/src/: CMakeLists.txt  capi.c  csi.c  main.c
feeds/qca-wifi-6/libtcmd/src/: Makefile.am  os.c  os.h
feeds/qca-wifi-6/qca-diag/src/: Makefile  configure.ac  registerReboot.c
feeds/qca-wifi-6/qca-diag/src/PktRspTest/: Android.mk  Makefile.am  PktRspTest.c
feeds/qca-wifi-6/qca-diag/src/callback_sample/: Makefile.am  diag_callback_sample.c
feeds/qca-wifi-6/qca-diag/src/dci_sample/: Android.mk  Makefile.am  diag_dci_sample.c
feeds/qca-wifi-6/qca-diag/src/include/: comdef.h  diag_lsm_dci.h  diagi.h  diagpkt.h  event.h  event_defs.h  msg_arrays_i.h  msg_pkt_defs.h  msg_qsr.h
feeds/qca-wifi-6/qca-diag/src/klog/: Android.mk  Makefile.am  diag_klog.c
feeds/qca-wifi-6/qca-diag/src/socket_log/: Android.mk  Makefile.am
feeds/qca-wifi-6/qca-diag/src/src/: diag.mk  diag_logger.h  diag_lsm_dci.c  diag_lsm_event.c  diag_lsm_event_i.h  diag_lsm_msg.c  diag_lsm_msg_i.h  diag_lsm_pkt.c  diag_lsm_pkt_i.h  diag_qshrink4_db_parser.c  diagdiag.h  diaglib.mak  diagsvc_malloc.h  eventi.h
feeds/qca-wifi-6/qca-diag/src/test/: Android.mk  test_diag.c
feeds/qca-wifi-6/qca-diag/src/uart_log/: Android.mk
feeds/tip/firstcontact/src/: CMakeLists.txt  digicert.c  firstcontact.c
feeds/ucentral/atfpolicy/src/: CMakeLists.txt  atf.h  interface.c  main.c  nl80211.c  ubus.c
feeds/ucentral/qosify/src/: CMakeLists.txt  README  interface.c  loader.c  main.c  map.c  qosify-bpf.c  qosify-bpf.h  qosify.h  ubus.c
feeds/ucentral/radius-gw-proxy/src/: CMakeLists.txt  main.c  ubus.c  ubus.h
feeds/ucentral/spotfilter/src/: CMakeLists.txt  bpf.c  bpf.h  bpf_skb_utils.h  client.c  client.h  dhcpv4.c  example.json  icmpv6.c  interface.c  interface.h  main.c  nl80211.c  rtnl.c  snoop.c  spotfilter-bpf.c  spotfilter-bpf.h  spotfilter.h  ubus.c
feeds/ucentral/ucentral-tools/src/: .clang-format  CMakeLists.txt  dhcpdiscover.c  dnsprobe.c  firstcontact.c  ip-collide.c  radiusprobe.c
feeds/ucentral/ucrun/src/: .gitignore  CMakeLists.txt  LICENSE  main.c  test.uc  ubus.c  ucode.c  ucrun.h
feeds/ucentral/udevmand/src/: CMakeLists.txt  blob.c  bridge.c  dhcp.c  ethers.c  mac.c  main.c  neigh.c  netdev.c  netifd.c  netlink.c  ubus.c  udevmand.h
feeds/ucentral/udhcprelay/src/: CMakeLists.txt  dev.c  dhcp.c  dhcprelay.h  main.c  msg.h  relay.c  ubus.c  utils.c
feeds/ucentral/udnssnoop/src/: .gitignore  CMakeLists.txt  dns.c  dns.h  main.c
feeds/ucentral/uspot/src/: CMakeLists.txt  radius-client.c  radius-das.c  radius.c  uam.c
feeds/wifi-ax_v5.4/qca-diag/src/mdlog/: Android.mk  Makefile.am  diag_mdlog.c
(+17102 files in other folders)
